--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tanstack/react-table": "^8.20.6",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
+    "moment": "^2.30.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
