--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-table": "^8.20.6",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "postcss": "^8.4.49",
