--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.20.6",
+    "@types/react-date-range": "^1.4.9",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "fuse.js": "^7.0.0",
@@ -18,6 +19,7 @@
     "moment": "^2.30.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.17"
   },
